--- a/terms.html
+++ b/terms.html
@@ -3,60 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions</title>
+    <title>Terms and Conditions | GlowUpPro</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .container {
+            width: 80%;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            color: #444;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        ul {
+            margin-bottom: 15px;
+            padding-left: 20px;
+        }
+    </style>
 </head>
 <body>
+
+<div class="container">
     <h1>Terms and Conditions</h1>
-    <p><strong>Effective Date: August 15, 2024</strong></p>
-    
-    <p>These Terms and Conditions ("Terms") govern your access and use of the GlowUpPro application (the "App"), provided by Sachin Marwaha ("we," "us," or "our"). By accessing or using the App, you agree to these Terms. If you do not agree to these Terms, you must immediately stop using the App and uninstall any copies in your possession.</p>
 
-    <h2>1. Service Overview</h2>
-    <p>GlowUpPro offers AI-based image generation services (the "Service"). To access the Service, users must purchase a subscription, which is required to use the app and to train AI models. Users may also purchase additional credits for generating images and extra model trainings through in-app purchases.</p>
+    <p>Last Updated: [Date]</p>
 
-    <h2>2. Purchases, Subscriptions, and Auto-Renewal</h2>
-    <ul>
-        <li><strong>Subscriptions:</strong> To use GlowUpPro, you are required to purchase a subscription, which grants you access to train and use AI models. The subscription will auto-renew unless you cancel it through your account in the App Store or Google Play.</li>
-        <li><strong>In-App Purchases:</strong> You may purchase additional image generation credits and extra model trainings. Extra model trainings allow you to either train a new model or refine an existing one with different photos.</li>
-        <li><strong>Pricing:</strong> Prices for subscriptions and in-app purchases will be clearly displayed within the App. By completing the purchase, you agree to pay all fees associated with the chosen plan.</li>
-    </ul>
+    <h2>1. Introduction</h2>
+    <p>Welcome to GlowUpPro. By downloading, installing, or using our application, you agree to these Terms and Conditions. Please read them carefully.</p>
 
-    <h2>3. Cancellation and Refund Policy</h2>
-    <ul>
-        <li><strong>Subscriptions:</strong> If you wish to cancel your subscription, you must do so through the App Store or Google Play. Uninstalling the App does not cancel your subscription. You will retain access to the Service until the end of the current billing cycle, but we do not provide refunds for unused portions of a subscription period.</li>
-        <li><strong>In-App Purchases:</strong> All consumable in-app purchases, including image generation credits and extra model trainings, are final and non-refundable once they have been purchased.</li>
-        <li><strong>Refund Requests:</strong> If you believe there has been an error with your purchase, you can contact us at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a>. Refunds are at our sole discretion and will typically not be granted for consumable items, in line with industry standards.</li>
-    </ul>
+    <h2>2. Services</h2>
+    <p>GlowUpPro provides AI-based image generation services. Users can purchase image generation credits and subscriptions to train and use AI models for generating personalized images.</p>
 
-    <h2>4. User Responsibilities</h2>
-    <p>By using the Service, you agree to the following:</p>
-    <ul>
-        <li>You will use the App for lawful purposes and refrain from violating any applicable local or international laws.</li>
-        <li>You will not upload, generate, or distribute any content that violates the rights of others, including but not limited to intellectual property or privacy rights.</li>
-        <li>You are responsible for maintaining the confidentiality of your account credentials and any activity that occurs under your account.</li>
-    </ul>
+    <h2>3. Purchases and Subscriptions</h2>
+    <p>No free trials are available. Our app offers auto-renewing subscriptions required to train and use the AI model, as well as in-app purchases for additional image generation credits and model training sessions.</p>
 
-    <h2>5. Intellectual Property</h2>
-    <p>The Service, including all software, content, and features provided within the App, is owned by or licensed to us. You are granted a limited, non-exclusive, non-transferable license to use the App for personal, non-commercial purposes.</p>
-    <p>You may not copy, distribute, modify, or create derivative works of the Service without our express permission.</p>
+    <h2>4. Refund Policy</h2>
+    <p>All purchases are non-refundable. Once a purchase is made, it is final, and you will not be entitled to a refund unless required by applicable law. If you believe you are entitled to a refund under applicable law, please contact our support at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a>.</p>
 
-    <h2>6. Privacy</h2>
-    <p>Your use of the App is subject to our Privacy Policy, which details how we handle your personal data. By using the App, you agree to the collection and use of information as outlined in our Privacy Policy.</p>
+    <h2>5. Privacy Policy</h2>
+    <p>Your use of our service is also governed by our <a href="/privacy">Privacy Policy</a>.</p>
 
-    <h2>7. Jurisdiction and Governing Law</h2>
-    <p>These Terms and your use of the App are governed by the laws of the United Kingdom. Any disputes arising out of or relating to these Terms will be submitted to the exclusive jurisdiction of the courts of the United Kingdom.</p>
+    <h2>6. Changes to the Terms</h2>
+    <p>We may update these Terms from time to time. When we make changes, we will update the date at the top of this document. You should review these Terms regularly to stay informed of any updates.</p>
 
-    <h2>8. Dispute Resolution</h2>
-    <p>In the event of any disputes, we encourage you to contact us at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a> to attempt to resolve the matter informally. If we are unable to reach a resolution, the dispute will be subject to the laws and courts of the United Kingdom.</p>
+    <h2>7. Governing Law</h2>
+    <p>These Terms and your use of the service are governed by the laws of the United Kingdom. Any disputes will be resolved in the courts of the United Kingdom.</p>
 
-    <h2>9. Changes to the Terms</h2>
-    <p>We may update these Terms from time to time to reflect changes in the Service or for legal, regulatory, or operational reasons. You will be notified of any changes through the App or via email. Continued use of the App after any such changes constitute your acceptance of the new Terms.</p>
+    <h2>8. Contact Information</h2>
+    <p>If you have any questions about these Terms, please contact us at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a>.</p>
+</div>
 
-    <h2>10. Termination</h2>
-    <p>We may terminate or suspend your account and access to the Service at our sole discretion, without prior notice, for conduct that we believe violates these Terms or is harmful to other users or the Service. Upon termination, your right to use the App will immediately cease.</p>
-
-    <p>If you have any questions or concerns about these Terms, please contact us at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a>.</p>
-
-    <p>These Terms were last updated on August 15, 2024.</p>
 </body>
 </html>
