--- a/terms.html
+++ b/terms.html
@@ -42,7 +42,7 @@
 <div class="container">
     <h1>Terms and Conditions</h1>
 
-    <p>Last Updated: [Date]</p>
+    <p>Last Updated: 1st September 2024</p>
 
     <h2>1. Introduction</h2>
     <p>Welcome to GlowUpPro. By downloading, installing, or using our application, you agree to these Terms and Conditions. Please read them carefully.</p>
