--- a/terms.html
+++ b/terms.html
@@ -45,27 +45,57 @@
     <p>Last Updated: 1st September 2024</p>
 
     <h2>1. Introduction</h2>
-    <p>Welcome to GlowUpPro. By downloading, installing, or using our application, you agree to these Terms and Conditions. Please read them carefully.</p>
+    <p>Welcome to GlowUpPro. By downloading, installing, or using our application, you agree to these Terms and Conditions. Please read them carefully before using our services.</p>
 
-    <h2>2. Services</h2>
-    <p>GlowUpPro provides AI-based image generation services. Users can purchase image generation credits and subscriptions to train and use AI models for generating personalized images.</p>
+    <h2>2. Acceptance of Terms</h2>
+    <p>By accessing and using GlowUpPro, you agree to comply with and be bound by these Terms. If you do not agree to these Terms, please do not use our services.</p>
 
-    <h2>3. Purchases and Subscriptions</h2>
-    <p>No free trials are available. Our app offers auto-renewing subscriptions required to train and use the AI model, as well as in-app purchases for additional image generation credits and model training sessions.</p>
+    <h2>3. Services</h2>
+    <p>GlowUpPro provides AI-based image generation services, allowing users to create personalized images using AI models. Our services include the ability to purchase image generation credits and subscriptions for training and using these AI models.</p>
 
-    <h2>4. Refund Policy</h2>
-    <p>All purchases are non-refundable. Once a purchase is made, it is final, and you will not be entitled to a refund unless required by applicable law. If you believe you are entitled to a refund under applicable law, please contact our support at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a>.</p>
+    <h2>4. Eligibility</h2>
+    <p>To use our services, you must be at least 16 years old. If you are under the age of 16, you are not permitted to use GlowUpPro. If you are over 16 but under the legal age of majority in your country, you must have your parent or guardian's permission to use GlowUpPro and to agree to these Terms.</p>
 
-    <h2>5. Privacy Policy</h2>
-    <p>Your use of our service is also governed by our <a href="/privacy">Privacy Policy</a>.</p>
+    <h2>5. User Account and Security</h2>
+    <p>You are responsible for maintaining the confidentiality of your account and password and for restricting access to your devices. You agree to accept responsibility for all activities that occur under your account. If you suspect any unauthorized use of your account, please notify us immediately at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a>.</p>
 
-    <h2>6. Changes to the Terms</h2>
-    <p>We may update these Terms from time to time. When we make changes, we will update the date at the top of this document. You should review these Terms regularly to stay informed of any updates.</p>
+    <h2>6. Purchases and Subscriptions</h2>
+    <p>GlowUpPro offers various paid services, including auto-renewing subscriptions for using and training AI models, and in-app purchases for additional image generation credits and model training sessions. All purchases are non-refundable. By making a purchase, you agree to the pricing, payment, and subscription terms presented to you at the time of purchase.</p>
 
-    <h2>7. Governing Law</h2>
-    <p>These Terms and your use of the service are governed by the laws of the United Kingdom. Any disputes will be resolved in the courts of the United Kingdom.</p>
+    <h2>7. Refund Policy</h2>
+    <p>All purchases made through GlowUpPro are final and non-refundable, except where required by applicable law. If you believe you are entitled to a refund under applicable law, please contact our support team at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a> for assistance.</p>
 
-    <h2>8. Contact Information</h2>
+    <h2>8. User Conduct</h2>
+    <p>You agree to use GlowUpPro only for lawful purposes and in a way that does not infringe the rights of others, restrict or inhibit anyone else's use and enjoyment of the service, or disrupt the normal flow of dialogue within the service. Prohibited activities include, but are not limited to:</p>
+    <ul>
+        <li>Uploading or transmitting any content that is unlawful, harmful, threatening, abusive, harassing, defamatory, vulgar, obscene, or otherwise objectionable.</li>
+        <li>Attempting to gain unauthorized access to any portion of the service or any other systems or networks connected to the service.</li>
+        <li>Using any robot, spider, or other automatic device or manual process to monitor or copy any content from the service without our prior written permission.</li>
+        <li>Engaging in any activity that interferes with or disrupts the service or the servers and networks that are connected to the service.</li>
+    </ul>
+
+    <h2>9. Intellectual Property</h2>
+    <p>All content, including text, graphics, logos, images, software, and audio, contained in or available through GlowUpPro is the property of GlowUpPro or its licensors and is protected by copyright, trademark, and other intellectual property laws. You may not reproduce, distribute, modify, create derivative works of, publicly display, or in any way exploit any of the content without our prior written consent.</p>
+
+    <h2>10. User-Generated Content</h2>
+    <p>GlowUpPro may allow users to upload, share, and generate content using our AI models. You retain ownership of any content you create, but you grant us a worldwide, non-exclusive, royalty-free license to use, reproduce, modify, adapt, publish, and display such content for the purpose of operating and improving our services. You are solely responsible for the content you create and share through GlowUpPro.</p>
+
+    <h2>11. Privacy Policy</h2>
+    <p>Your use of GlowUpPro is also governed by our <a href="/privacy">Privacy Policy</a>. Please review it carefully to understand how we collect, use, and protect your personal information.</p>
+
+    <h2>12. Changes to the Terms</h2>
+    <p>We may update these Terms from time to time. When we make changes, we will update the date at the top of this document and notify you via email or a pop-up notification within the service. It is your responsibility to review these Terms regularly. By continuing to use our services after changes are made, you agree to be bound by the updated Terms.</p>
+
+    <h2>13. Termination</h2>
+    <p>We may terminate or suspend your access to GlowUpPro at any time, with or without cause, and without notice or liability. Upon termination, your right to use the service will immediately cease. If you wish to terminate your account, you may simply discontinue using the service.</p>
+
+    <h2>14. Limitation of Liability</h2>
+    <p>To the maximum extent permitted by law, GlowUpPro and its affiliates, licensors, and service providers will not be liable for any indirect, incidental, special, consequential, or punitive damages, including, but not limited to, loss of profits, data, use, goodwill, or other intangible losses, resulting from your access to or use of, or inability to access or use, the service.</p>
+
+    <h2>15. Governing Law and Jurisdiction</h2>
+    <p>These Terms are governed by the laws of the United Kingdom. Any disputes arising out of or relating to these Terms or your use of the service will be resolved in the courts of the United Kingdom.</p>
+
+    <h2>16. Contact Information</h2>
     <p>If you have any questions about these Terms, please contact us at <a href="mailto:support@glowuppro.ai">support@glowuppro.ai</a>.</p>
 </div>
 
