--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 
     <div class="container">
         <h1>Contact Us</h1>
-        <form id="contactForm" action="https://formsubmit.co/your-email@example.com" method="POST">
+        <form id="contactForm" action="https://formsubmit.co/support@glowuppro.ai" method="POST">
             <!-- Anti-spam honeypot field -->
             <input type="text" name="_honey" style="display:none">
             <!-- Disable Captcha verification -->
